--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,53 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  margin-top: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 80%;
+  max-width: 1200px;
+  margin: 20px 0;
+}
+
+.form-container {
+  flex: 1;
+  margin-right: 20px;
+  margin-top: 40px; 
+  font-size: 0.9em;
+}
+
+.chart-container {
+  flex: 2;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-top: 10px;
+}
+
+button {
+  grid-column: span 2; /* Make the button span both columns */
+  padding: 10px 20px;
+  margin-top: 20px; /* Space above the button */
+  font-size: 1em;
+  cursor: pointer;
+}
 
 table {
   width: 100%;
@@ -13,9 +63,15 @@ td {
 th,
 td {
   padding: 8px;
-  text-align: right;
+  text-align: left;
 }
 
 th {
   background-color: #f2f2f2;
+}
+
+#resultsTable {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
